--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Furious Chargers - AES with 2FA - Demo</title>
+    <title>⚡ Furious Chargers - AES with 2FA</title>
     <link rel="stylesheet" href="styles.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/base-32@0.0.3/lib/index.min.js"></script>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">Furious Chargers - AES with 2FA - Demo</h1>
+        <h1 class="heading">⚡ Furious Chargers - AES with 2FA</h1>
 
 	<div class="encrypt-section">
             <h2 class="section-heading">Encrypt File</h2>
